# HogeHoge

./: CMakeLists.txt  readme.md  start_cmd.bash
Application/: CMakeLists.txt  main.cpp
ESP32_Serial_Test/: ESP32_Serial_Test.ino  EncoderMod.h  HogeHogeSerial.h  ModuleDefinition.h  Solenoid.h  SolenoidMod.h
GUIApplication/: CMakeLists.txt
GUIApplication/Application/: CMakeLists.txt  MainWindow.h  main.cpp
HogeGen1/ESP32_Serial_Test/: BaseModule.h  CommunicationDefinition.h  Motor.h  MotorControlMod.h  SensorMod.h
HogeGen1/GUIApplication/: CMakeLists.txt
HogeGen1/GUIApplication/Application/: CMakeLists.txt
HogeGen1/Main/Application/: CMakeLists.txt
HogeGen2/: config.json  config_ttyACM0.json  system.json
HogeGen2/Common/: CommandDefinition.h  ISendCommand.h  Utility.h
HogeGen2/Common/MessageOutputter/: MessageOutputter.h
HogeGen2/Common/Module/: Module.h  ModuleComposition.h
HogeGen2/Common/ModuleManager/: ModuleManager.h
HogeGen2/Common/Socket/: Client.h  Server.h
HogeGen2/ESP32_Serial_Test_Gen2/: CommandDefinition.h  ESP32_Serial_Test_Gen2.ino  HogeHogeSerial.h  InputComponent.h  Module.h  ModuleManager.h  OutputComponent.h  PWMComponent.h  nDOF.h
HogeGen2/GUI/: CMakeLists.txt
HogeGen2/GUI/App/: CMakeLists.txt  MainWindow.h  main.cpp
HogeGen2/GUI/Lib/: CMakeLists.txt  GlobalFlagManager.h
HogeGen2/GUI/Lib/DeviceValue/: DeviceValue.cpp
HogeGen2/GUI/Lib/IPCommunicationSub/: IPCommunicationSub.h
HogeGen2/GUI/Lib/Interface/: IGroupBox.h  IModuleDeserializer.h
HogeGen2/GUI/Lib/MainWindow/: MainWindow.cpp  MainWindow.h
HogeGen2/GUI/Lib/ModuleManagerGUI/: ModuleManagerGUI.cpp  ModuleManagerGUI.h
HogeGen2/GUI/Lib/Modules/: EncoderModuleGUI.cpp  EncoderModuleGUI.h  MotorModuleGUI.cpp  MotorModuleGUI.h  SensorModuleGUI.cpp  SensorModuleGUI.h  SolenoidModuleGUI.cpp  SolenoidModuleGUI.h
HogeGen2/GUI/Lib/Socket/: Client.h
HogeGen2/GUI/Lib/SubWindow/: SubWindow.h
HogeGen2/Main/: .gitignore  CMakeLists.txt
HogeGen2/Main/App/: CMakeLists.txt  Test.h  main.cpp
HogeGen2/Main/App/Application/: Application.cpp  Application.h
HogeGen2/Main/Lib/: CMakeLists.txt  HogeHoge.h
HogeGen2/Main/Lib/ConfigFileLoader/: ConfigFileLoader.h
HogeGen2/Main/Lib/GUICommunication/: GUICommunication.h
HogeGen2/Main/Lib/HogeHogeSerial/: HogeHogeSerial.cpp  HogeHogeSerial.h
HogeGen2/Main/Lib/IPCommunication/: IPCommunication.h
HogeGen2/Main/Lib/Interface/: IModuleController.h  IModuleReceiver.h  IModuleSender.h  IModuleSerializer.h
HogeGen2/Main/Lib/ModuleManagerMain/: ModuleManagerMain.cpp  ModuleManagerMain.h
HogeGen2/Main/Lib/Modules/: EncoderModuleMain.cpp  EncoderModuleMain.h  MotorModuleMain.cpp  MotorModuleMain.h  SensorModuleMain.cpp  SensorModuleMain.h  SolenoidModuleMain.cpp  SolenoidModuleMain.h
HogeGen2/Main/Lib/SerialCommunication/: SerialCommunication.cpp  SerialCommunication.h
HogeGen2/Main/Lib/Socket/: Server.h
HogeGen2/Main/Lib/Timer/: Timer.h
Main/Application/: main.cpp
Reference/: Class.pu  ClassEx.pu  Communication.txt  HogeGen2Class.pu  flow.pu  memo.txt
